--- a/turno.html
+++ b/turno.html
@@ -7,48 +7,48 @@
   <title>Gestión de Turnos</title>
   <!-- Agregar los enlaces a los archivos de CSS de Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css"> <!-- Archivo CSS personalizado -->
 </head>
 
 <body>
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-md-8">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="text-center mb-4">Gestión de Turnos</h2>
-            <form id="turnoForm">
-              <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" name="nombre" required>
-              </div>
-              <div class="form-group">
-                <label for="fecha">Fecha:</label>
-                <input type="date" class="form-control" id="fecha" name="fecha" required>
-              </div>
-              <div class="form-group">
-                <label for="hora">Hora:</label>
-                <input type="time" class="form-control" id="hora" name="hora" required>
-              </div>
-              <div class="form-group">
-                <label for="profesional">Profesional:</label>
-                <select class="form-control" id="profesional" name="profesional" required>
-                  <option value="" disabled selected>Seleccionar profesional</option>
-                  <option value="Dr. Juan Pérez">Dr. Juan Pérez</option>
-                  <option value="Dra. María Gómez">Dra. María Gómez</option>
-                  <!-- Agregar más opciones de profesionales aquí -->
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary btn-block">Pedir Turno</button>
-            </form>
+      <div class="col-md-6">
+        <h2 class="text-center mb-4">Solicitar Turno</h2>
+        <form id="turnoForm">
+          <div class="form-group">
+            <label for="nombre">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" required>
           </div>
-        </div>
-        <div class="mt-5">
-          <h3>Mis Turnos</h3>
-          <ul class="list-group" id="turnosList">
-            <!-- Aquí se mostrarán los turnos agregados -->
-          </ul>
-        </div>
+          <div class="form-group">
+            <label for="fecha">Fecha:</label>
+            <input type="date" class="form-control" id="fecha" name="fecha" required>
+          </div>
+          <div class="form-group">
+            <label for="hora">Hora:</label>
+            <input type="time" class="form-control" id="hora" name="hora" required>
+          </div>
+          <div class="form-group">
+            <label for="profesional">Profesional:</label>
+            <select class="form-control" id="profesional" name="profesional" required>
+              <option value="">Seleccione un profesional</option>
+              <!-- Agregar aquí las opciones de profesionales -->
+              <option value="Dr. Juan Pérez">Dr. Juan Pérez</option>
+              <option value="Dra. María Gómez">Dra. María Gómez</option>
+              <option value="Dr. Carlos López">Dr. Carlos López</option>
+              <option value="Dra. Laura Rodríguez">Dra. Laura Rodríguez</option>
+              <option value="Lic. Ana Fernández">Lic. Ana Fernández</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Solicitar Turno</button>
+        </form>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <h2 class="text-center">Turnos Guardados</h2>
+        <ul id="turnosGuardadosList" class="list-group">
+          <!-- Aquí se mostrarán los turnos guardados -->
+        </ul>
       </div>
     </div>
   </div>
@@ -61,4 +61,3 @@
 </body>
 
 </html>
-
