--- a/Profesionales.html
+++ b/Profesionales.html
@@ -16,11 +16,11 @@
       <div class="col-md-8">
         <h2 class="text-center mb-4">Profesionales de la Salud</h2>
         <ul class="list-group">
-          <li class="list-group-item">Dr. Juan Pérez - Médico General</li>
-          <li class="list-group-item">Dra. María Gómez - Pediatra</li>
-          <li class="list-group-item">Lic. Ana Rodríguez - Nutricionista</li>
-          <li class="list-group-item">Dr. Carlos Sánchez - Cardiólogo</li>
-          <li class="list-group-item">Lic. Laura Martínez - Psicóloga</li>
+          <li class="list-group-item"><a href="turno.html">Dr. Pablo Zottola - Médico General</a></li>
+          <li class="list-group-item"><a href="turno.html">LIC. Chehuan Maximiliano - Pediatra</a></li>
+          <li class="list-group-item"><a href="turno.html">Dr. Pablo Cazon - Cardiologo</a></li>
+          <li class="list-group-item"><a href="turno.html">LIC. Tomas Jerez - Nutricionista</a></li>
+          <li class="list-group-item"><a href="turno.html">Dr. Gonzalo Ruiz - Traumatologo</a></li>
         </ul>
       </div>
     </div>
